[gd_scene load_steps=3 format=3 uid="uid://v2y741i6ilgk"]

[ext_resource type="Texture2D" uid="uid://debbjc3xptl23" path="res://Art/Tiles/Background.png" id="1_rbkcc"]
[ext_resource type="Script" path="res://Level/MainMenu.gd" id="1_xwx84"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xwx84")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(245, 324)
scale = Vector2(1.62392, 1.62392)
texture = ExtResource("1_rbkcc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -191.0
offset_right = 83.0
offset_bottom = -90.0
grow_vertical = 0
scale = Vector2(1.79975, 1.79975)

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
